--- a/_posts/temp_trash_can/프로젝트/community/2022-01-16-mail.md
+++ b/_posts/temp_trash_can/프로젝트/community/2022-01-16-mail.md
@@ -1,21 +1,37 @@
----
-title: "mail"
-categories: project_community
----
+[//]: # (---)
 
-[1. Spring Mail 라이브러리를 통한 메일 구현](#spring-mail-라이브러리를-통한-메일-구현)  
-[2. Redis 를 통한 인증번호 저장소 구현](#redis-를-통한-인증번호-저장소-구현)
+[//]: # (title: "mail")
 
-## Spring Mail 라이브러리를 통한 메일 구현
-![1](https://user-images.githubusercontent.com/48073115/149655645-df053745-10fb-468c-a8a9-ae93f852f278.png)
-![1](https://user-images.githubusercontent.com/48073115/149655694-4f8a10c1-b864-4025-8254-cd2743150d80.png)
-![1](https://user-images.githubusercontent.com/48073115/149655768-919f65a7-009e-459a-8c78-db2708771b68.png)
-![1](https://user-images.githubusercontent.com/48073115/149655787-d5ab63a1-291b-4414-abba-81c9c15a83c1.png)
+[//]: # (categories: project_community)
 
-+ 구현하다 보면 인증번호를 검증하기 위한 저장소가 필요하다는 것을 깨닫는다.
-+ DB로 저장하기엔 일회성이라 휘발성이 강해 아깝다는 생각이 든다.
-+ 그래서 인메모리라 접근이 빠르고 일회성이라 휘발성이 강해 용량에 부담이 안드는 Redis를 선택했다.
+[//]: # (---)
 
-## Redis 를 통한 인증번호 저장소 구현  
-![1](https://user-images.githubusercontent.com/48073115/149656521-d6d5c326-a7fd-41e5-83a6-25bed39606d3.png)
-![2](https://user-images.githubusercontent.com/48073115/149656527-f0bc5340-5f1f-4bca-a988-d5e5a652e8e2.png)
+[//]: # ()
+[//]: # ([1. Spring Mail 라이브러리를 통한 메일 구현]&#40;#spring-mail-라이브러리를-통한-메일-구현&#41;  )
+
+[//]: # ([2. Redis 를 통한 인증번호 저장소 구현]&#40;#redis-를-통한-인증번호-저장소-구현&#41;)
+
+[//]: # ()
+[//]: # (## Spring Mail 라이브러리를 통한 메일 구현)
+
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149655645-df053745-10fb-468c-a8a9-ae93f852f278.png&#41;)
+
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149655694-4f8a10c1-b864-4025-8254-cd2743150d80.png&#41;)
+
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149655768-919f65a7-009e-459a-8c78-db2708771b68.png&#41;)
+
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149655787-d5ab63a1-291b-4414-abba-81c9c15a83c1.png&#41;)
+
+[//]: # ()
+[//]: # (+ 구현하다 보면 인증번호를 검증하기 위한 저장소가 필요하다는 것을 깨닫는다.)
+
+[//]: # (+ DB로 저장하기엔 일회성이라 휘발성이 강해 아깝다는 생각이 든다.)
+
+[//]: # (+ 그래서 인메모리라 접근이 빠르고 일회성이라 휘발성이 강해 용량에 부담이 안드는 Redis를 선택했다.)
+
+[//]: # ()
+[//]: # (## Redis 를 통한 인증번호 저장소 구현  )
+
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149656521-d6d5c326-a7fd-41e5-83a6-25bed39606d3.png&#41;)
+
+[//]: # (![2]&#40;https://user-images.githubusercontent.com/48073115/149656527-f0bc5340-5f1f-4bca-a988-d5e5a652e8e2.png&#41;)
