--- a/_posts/temp_trash_can/프로젝트/community/2022-01-17-게시판 CURD.md
+++ b/_posts/temp_trash_can/프로젝트/community/2022-01-17-게시판 CURD.md
@@ -1,288 +1,544 @@
----
-title: "게시판 CURD"
-categories: project_community
----
+[//]: # (---)
 
-[1. Post Code](#post-code)  
-[2. Edit Code](#edit-code)  
-[3. Get Code](#get-code)  
-[4. Delete Code](#delete-code)
+[//]: # (title: "게시판 CURD")
 
-## Post Code
-```java
-/**
-     * 글쓰기
-     */
-    @RequestMapping("/post")
-    public String post(Model model, HttpServletRequest request) {
-        String id = UUID.randomUUID().toString();
-        BoardDto.post postBoardDto = new BoardDto.post();
-        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
+[//]: # (categories: project_community)
 
-        if (Optional.ofNullable(inputFlashMap).isPresent()) {
-            id = (String) inputFlashMap.get("id");
-            postBoardDto = (BoardDto.post) inputFlashMap.get("postBoardDto");
-        }
+[//]: # (---)
 
-        model.addAttribute("id", id);
-        model.addAttribute("postBoardDto", postBoardDto);
-        return "board/post";
-    }
+[//]: # ()
+[//]: # ([1. Post Code]&#40;#post-code&#41;  )
 
-    @RequestMapping(value = "/post", method = RequestMethod.POST)
-    public String addPost(
-            @Validated @ModelAttribute BoardDto.post postBoardDto,
-            BindingResult bindingResult,
-            @AuthenticationPrincipal Member member,
-            @RequestParam String id,
-            RedirectAttributes redirectAttributes, HttpServletRequest request) throws Exception {
-        //로그인 했다면 닉네임, 패스워드에 검증이 통과할 수 있도록 값을 넣어준다.
-        if (Optional.ofNullable(member).isPresent()) {
-            postBoardDto.setNickname(member.getNickname());
-            postBoardDto.setPassword(UUID.randomUUID().toString());
-        }
-        //에러가 생길 수 있는 필드와 그에 맞는 메시지를 DTO 를 만들고 거기에 저장한다.
-        Map<String, String> errors = new HashMap<>();
-        errors.put("title", "제목 값이 비어있습니다.");
-        errors.put("nickname", "닉네임 값이 비어있습니다.");
-        errors.put("password", "비밀번호 값이 비어있습니다.");
-        errors.put("content", "내용 값이 비어있습니다.");
-        //그 필드 검증에 에러가 생기면 errorMessage 를 redirect 해서 다시 보낸다.
-        for (String key : errors.keySet()) {
-            if (bindingResult.hasFieldErrors(key)) {
-                redirectErrorMessage(redirectAttributes, errors.get(key), postBoardDto);
-                redirectAttributes.addFlashAttribute("id", id);
-                return "redirect:/board/post";
-            }
-        }
-        //로그인을 안했다면 닉네임 옆에 IP를 붙여준다.
-        if (Optional.ofNullable(member).isEmpty()) {
-            postBoardDto.setNickname(postBoardDto.getNickname() + "(" + ipService.getClientIP(request) + ")");
-        }
+[//]: # ([2. Edit Code]&#40;#edit-code&#41;  )
 
-        //글쓰기 성공
-        List<Image> imageList = imageService.findListByUUID(id);
-        Board board = boardService.findById(boardService.save(postBoardDto, member, id));
-        imageService.imageListSetBoard(board, imageList);
-        return "redirect:/board";
-    }
-...
-```
+[//]: # ([3. Get Code]&#40;#get-code&#41;  )
 
-## Edit Code
-```java
-/**
-     * 글수정
-     */
-    @RequestMapping("/edit/{boardId}")
-    public String edit(
-            @PathVariable(name = "boardId") Long boardId,
-            @AuthenticationPrincipal Member member,
-            Model model, HttpServletRequest request) throws Exception {
-        Board board = boardService.findById(boardId);
+[//]: # ([4. Delete Code]&#40;#delete-code&#41;)
 
-        //회원이 쓴 글이면 로그인이 안되있거나 글을 쓴 회원과 동일아이디가 아닐 경우 에러발생
-        if (Optional.ofNullable(board.getEmail()).isPresent()) {
-            if (Optional.ofNullable(member).isEmpty() || !member.getEmail().equals(board.getEmail())) {
-                return "error/403";
-            }
-        }
-        //nickname ip 제거
-        String nickname = ipService.deleteClientIP(board.getNickname());
-        //redirect 인 경우 현재 글을 가져오고, 아닌 경우 데이터베이스에 있는 board 데이터를 가지고 온다.
-        BoardDto.post postBoardDto;
-        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
+[//]: # ()
+[//]: # (## Post Code)
 
-        if (Optional.ofNullable(inputFlashMap).isPresent()) {
-            postBoardDto = (BoardDto.post) inputFlashMap.get("postBoardDto");
-        } else {
-            postBoardDto = BoardDto.post.builder()
-                    .title(board.getTitle())
-                    .content(board.getContent())
-                    .uuid(board.getUuid())
-                    .nickname(nickname)
-                    .password(board.getPassword())
-                    .build();
-        }
+[//]: # (```java)
 
-        model.addAttribute("postBoardDto", postBoardDto);
-        model.addAttribute("boardId", boardId);
+[//]: # (/**)
 
-        return "board/edit";
-    }
+[//]: # (     * 글쓰기)
 
-    @RequestMapping(value = "/edit", method = RequestMethod.POST)
-    public String editPost(
-            @Validated @ModelAttribute BoardDto.post postBoardDto,
-            BindingResult bindingResult,
-            @AuthenticationPrincipal Member member,
-            @RequestParam Long boardId,
-            Model model, RedirectAttributes redirectAttributes, HttpServletRequest request) throws Exception {
-        Board board = boardService.findById(boardId);
-        postBoardDto.setUuid(board.getUuid());
+[//]: # (     */)
 
-        Map<String, String> errors = new HashMap<>();
-        errors.put("title", "제목 값이 비어있습니다.");
-        errors.put("nickname", "닉네임 값이 비어있습니다.");
-        errors.put("password", "비밀번호 값이 비어있습니다.");
-        errors.put("content", "내용 값이 비어있습니다.");
-        //그 필드 검증에 에러가 생기면 errorMessage 를 redirect 해서 다시 보낸다.
-        for (String key : errors.keySet()) {
-            if (bindingResult.hasFieldErrors(key)) {
-                redirectErrorMessage(redirectAttributes, errors.get(key), postBoardDto);
-                return "redirect:/board/edit/" + boardId;
-            }
-        }
+[//]: # (    @RequestMapping&#40;"/post"&#41;)
 
-        //자신의 글이 맞는지 확인, 로그인이 안돼있으면 비밀번호 확인
-        if (StringUtils.isEmpty(board.getEmail())) {
-            if (!board.getPassword().equals(postBoardDto.getPassword())) {
-                redirectErrorMessage(redirectAttributes, "비밀번호가 맞지 않습니다.", postBoardDto);
-                return "redirect:/board/edit/" + boardId;
-            }
-        } else {
-            if (Optional.ofNullable(member).isEmpty() || !board.getEmail().equals(member.getEmail())) {
-                redirectErrorMessage(redirectAttributes, "글을 수정할 권한이 없습니다.", postBoardDto);
-                return "error/403";
-            }
-        }
+[//]: # (    public String post&#40;Model model, HttpServletRequest request&#41; {)
 
-        //login 안했으면 nickname 에 ip 부여
-        if (Optional.ofNullable(member).isEmpty()) {
-            postBoardDto.setNickname(postBoardDto.getNickname() + "(" + ipService.getClientIP(request) + ")");
-        }
+[//]: # (        String id = UUID.randomUUID&#40;&#41;.toString&#40;&#41;;)
 
-        //글수정 성공
-        boardService.putBoard(postBoardDto, board);
-        List<Image> imageList = imageService.findListByUUID(board.getUuid());
-        imageService.imageListSetDeleted(imageList);
-        imageService.imageListSetBoard(board, imageList);
-        return "redirect:/board";
-    }
-...
-```
+[//]: # (        BoardDto.post postBoardDto = new BoardDto.post&#40;&#41;;)
 
-## Get Code
-```java
-/**
-     * 글 목록보기
-     */
-    @RequestMapping(method = RequestMethod.GET)
-    public String board(
-            Model model,
-            @PageableDefault(size = 20) Pageable pageable) {
-        Page<BoardDto.getQuery> page = boardService.getBoardList(pageable);
+[//]: # (        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap&#40;request&#41;;)
 
-        List<BoardDto.getQuery> boardDTOList = page.getContent();
+[//]: # ()
+[//]: # (        if &#40;Optional.ofNullable&#40;inputFlashMap&#41;.isPresent&#40;&#41;&#41; {)
 
-        BoardDto.page boardPageDto = BoardDto.page.builder()
-                .total(page.getTotalPages())
-                .page(page.getNumber())
-                .build();
+[//]: # (            id = &#40;String&#41; inputFlashMap.get&#40;"id"&#41;;)
 
-        model.addAttribute("boardDTOList", boardDTOList);
-        model.addAttribute("boardPageDto", boardPageDto);
-        return "board/board";
-    }
+[//]: # (            postBoardDto = &#40;BoardDto.post&#41; inputFlashMap.get&#40;"postBoardDto"&#41;;)
 
-    /**
-     * 글 상세보기
-     */
-    @RequestMapping(value = "/getBoard/{id}", method = RequestMethod.GET)
-    public String getBoard(
-            @PathVariable(name = "id") Long id,
-            Model model) throws Exception {
-        //id 로 board 를 찾고 getBoardDto 에 필요한 값을 넣고 생성한다.
-        Board board = boardService.findById(id);
-        String email;
-        if (Optional.ofNullable(board.getMember()).isEmpty()) email = null;
-        else email = board.getMember().getEmail();
+[//]: # (        })
 
-        BoardDto.get getBoardDto = BoardDto.get.builder().
-                id(board.getId()).
-                email(board.getEmail()).
-                title(board.getTitle()).
-                content(board.getContent()).
-                nickname(board.getNickname()).build();
+[//]: # ()
+[//]: # (        model.addAttribute&#40;"id", id&#41;;)
 
-        //board 의 commentList 를 구하고 board 에 댓글이 있을 경우에만 실행
-        List<Comment> commentList = board.getCommentList();
-        List<CommentDto.get> getCommentDtoList = new ArrayList<>();
-        BoardDto.page pageDto = new BoardDto.page();
-        if (!commentList.isEmpty()) {
-            //pages = 0 : startId, 1 : limit, 2 : totalPage
-            List<Integer> pages = commentControllerService.findCommentStartIdAndLimit(0, 50, board.getCommentList());
-            //댓글이 startId 에서 시작해서 limit 로 끝나는 Query 로 filter_commentList 를 구한다.
-            List<Comment> filter_commentList = commentService.getCommentList(pages.get(0), pages.get(1), board);
-            //filter_commentList 를 getCommentDtoList 로 바꾸는 작업을 한다.(또한 댓글들을 올바르게 정렬)
-            getCommentDtoList = commentControllerService.convertGetCommentListDto(filter_commentList);
-            pageDto.setTotal(pages.get(2));
-        }
+[//]: # (        model.addAttribute&#40;"postBoardDto", postBoardDto&#41;;)
 
-        model.addAttribute("getBoardDto", getBoardDto);
-        model.addAttribute("commentList", getCommentDtoList);
-        model.addAttribute("commentDto", new CommentDto.get());
-        model.addAttribute("commentPageDto", pageDto);
-        model.addAttribute("boardId", id);
+[//]: # (        return "board/post";)
 
-        return "board/getBoard";
-    }
-...
-```
+[//]: # (    })
 
-## Delete Code
-```java
-/**
-     * 글삭제
-     */
-    @RequestMapping(value = "/delete/{boardId}")
-    public String delete(
-            @PathVariable(name = "boardId") Long boardId,
-            @AuthenticationPrincipal Member member,
-            Model model) throws Exception {
-        Board board = boardService.findById(boardId);
+[//]: # ()
+[//]: # (    @RequestMapping&#40;value = "/post", method = RequestMethod.POST&#41;)
 
-        //자신의 글이 맞는지 확인
-        if (Optional.ofNullable(board.getEmail()).isPresent()) {
-            if (Optional.ofNullable(member).isEmpty()) {
-                if (!member.getEmail().equals(board.getEmail())) {
-                    model.addAttribute("errorMessage", "글을 삭제할 권한이 없습니다");
-                    return "error/403";
-                }
-            }
-        }
+[//]: # (    public String addPost&#40;)
 
-        model.addAttribute("boardId", boardId);
-        model.addAttribute("boardEmail", board.getEmail());
-        model.addAttribute("deleteBoardDto", new BoardDto.delete());
-        return "board/delete";
-    }
+[//]: # (            @Validated @ModelAttribute BoardDto.post postBoardDto,)
 
-    @RequestMapping(value = "/delete", method = RequestMethod.POST)
-    public String deletePost(
-            @ModelAttribute BoardDto.delete deleteBoardDto,
-            @RequestParam Long boardId,
-            @AuthenticationPrincipal Member member,
-            Model model, RedirectAttributes redirectAttributes) throws Exception {
-        Board board = boardService.findById(boardId);
+[//]: # (            BindingResult bindingResult,)
 
-        //자신의 글이 맞는지 확인
-        if (Optional.ofNullable(board.getEmail()).isPresent()) {
-            if (Optional.ofNullable(member).isEmpty()) {
-                if (!member.getEmail().equals(board.getEmail())) {
-                    model.addAttribute("errorMessage", "글을 삭제할 권한이 없습니다");
-                    return "error/403";
-                }
-            }
-        } else {
-            if (!board.getPassword().equals(deleteBoardDto.getPassword())) {
-                redirectAttributes.addFlashAttribute("errorMessage", "비밀번호가 맞지 않습니다.");
-                return "redirect:/board/delete/" + boardId;
-            }
-        }
+[//]: # (            @AuthenticationPrincipal Member member,)
 
-        boardService.deleteBoard(board);
-        return "redirect:/board";
-    }
-...
-```
+[//]: # (            @RequestParam String id,)
+
+[//]: # (            RedirectAttributes redirectAttributes, HttpServletRequest request&#41; throws Exception {)
+
+[//]: # (        //로그인 했다면 닉네임, 패스워드에 검증이 통과할 수 있도록 값을 넣어준다.)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;member&#41;.isPresent&#40;&#41;&#41; {)
+
+[//]: # (            postBoardDto.setNickname&#40;member.getNickname&#40;&#41;&#41;;)
+
+[//]: # (            postBoardDto.setPassword&#40;UUID.randomUUID&#40;&#41;.toString&#40;&#41;&#41;;)
+
+[//]: # (        })
+
+[//]: # (        //에러가 생길 수 있는 필드와 그에 맞는 메시지를 DTO 를 만들고 거기에 저장한다.)
+
+[//]: # (        Map<String, String> errors = new HashMap<>&#40;&#41;;)
+
+[//]: # (        errors.put&#40;"title", "제목 값이 비어있습니다."&#41;;)
+
+[//]: # (        errors.put&#40;"nickname", "닉네임 값이 비어있습니다."&#41;;)
+
+[//]: # (        errors.put&#40;"password", "비밀번호 값이 비어있습니다."&#41;;)
+
+[//]: # (        errors.put&#40;"content", "내용 값이 비어있습니다."&#41;;)
+
+[//]: # (        //그 필드 검증에 에러가 생기면 errorMessage 를 redirect 해서 다시 보낸다.)
+
+[//]: # (        for &#40;String key : errors.keySet&#40;&#41;&#41; {)
+
+[//]: # (            if &#40;bindingResult.hasFieldErrors&#40;key&#41;&#41; {)
+
+[//]: # (                redirectErrorMessage&#40;redirectAttributes, errors.get&#40;key&#41;, postBoardDto&#41;;)
+
+[//]: # (                redirectAttributes.addFlashAttribute&#40;"id", id&#41;;)
+
+[//]: # (                return "redirect:/board/post";)
+
+[//]: # (            })
+
+[//]: # (        })
+
+[//]: # (        //로그인을 안했다면 닉네임 옆에 IP를 붙여준다.)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;member&#41;.isEmpty&#40;&#41;&#41; {)
+
+[//]: # (            postBoardDto.setNickname&#40;postBoardDto.getNickname&#40;&#41; + "&#40;" + ipService.getClientIP&#40;request&#41; + "&#41;"&#41;;)
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        //글쓰기 성공)
+
+[//]: # (        List<Image> imageList = imageService.findListByUUID&#40;id&#41;;)
+
+[//]: # (        Board board = boardService.findById&#40;boardService.save&#40;postBoardDto, member, id&#41;&#41;;)
+
+[//]: # (        imageService.imageListSetBoard&#40;board, imageList&#41;;)
+
+[//]: # (        return "redirect:/board";)
+
+[//]: # (    })
+
+[//]: # (...)
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (## Edit Code)
+
+[//]: # (```java)
+
+[//]: # (/**)
+
+[//]: # (     * 글수정)
+
+[//]: # (     */)
+
+[//]: # (    @RequestMapping&#40;"/edit/{boardId}"&#41;)
+
+[//]: # (    public String edit&#40;)
+
+[//]: # (            @PathVariable&#40;name = "boardId"&#41; Long boardId,)
+
+[//]: # (            @AuthenticationPrincipal Member member,)
+
+[//]: # (            Model model, HttpServletRequest request&#41; throws Exception {)
+
+[//]: # (        Board board = boardService.findById&#40;boardId&#41;;)
+
+[//]: # ()
+[//]: # (        //회원이 쓴 글이면 로그인이 안되있거나 글을 쓴 회원과 동일아이디가 아닐 경우 에러발생)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;board.getEmail&#40;&#41;&#41;.isPresent&#40;&#41;&#41; {)
+
+[//]: # (            if &#40;Optional.ofNullable&#40;member&#41;.isEmpty&#40;&#41; || !member.getEmail&#40;&#41;.equals&#40;board.getEmail&#40;&#41;&#41;&#41; {)
+
+[//]: # (                return "error/403";)
+
+[//]: # (            })
+
+[//]: # (        })
+
+[//]: # (        //nickname ip 제거)
+
+[//]: # (        String nickname = ipService.deleteClientIP&#40;board.getNickname&#40;&#41;&#41;;)
+
+[//]: # (        //redirect 인 경우 현재 글을 가져오고, 아닌 경우 데이터베이스에 있는 board 데이터를 가지고 온다.)
+
+[//]: # (        BoardDto.post postBoardDto;)
+
+[//]: # (        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap&#40;request&#41;;)
+
+[//]: # ()
+[//]: # (        if &#40;Optional.ofNullable&#40;inputFlashMap&#41;.isPresent&#40;&#41;&#41; {)
+
+[//]: # (            postBoardDto = &#40;BoardDto.post&#41; inputFlashMap.get&#40;"postBoardDto"&#41;;)
+
+[//]: # (        } else {)
+
+[//]: # (            postBoardDto = BoardDto.post.builder&#40;&#41;)
+
+[//]: # (                    .title&#40;board.getTitle&#40;&#41;&#41;)
+
+[//]: # (                    .content&#40;board.getContent&#40;&#41;&#41;)
+
+[//]: # (                    .uuid&#40;board.getUuid&#40;&#41;&#41;)
+
+[//]: # (                    .nickname&#40;nickname&#41;)
+
+[//]: # (                    .password&#40;board.getPassword&#40;&#41;&#41;)
+
+[//]: # (                    .build&#40;&#41;;)
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        model.addAttribute&#40;"postBoardDto", postBoardDto&#41;;)
+
+[//]: # (        model.addAttribute&#40;"boardId", boardId&#41;;)
+
+[//]: # ()
+[//]: # (        return "board/edit";)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @RequestMapping&#40;value = "/edit", method = RequestMethod.POST&#41;)
+
+[//]: # (    public String editPost&#40;)
+
+[//]: # (            @Validated @ModelAttribute BoardDto.post postBoardDto,)
+
+[//]: # (            BindingResult bindingResult,)
+
+[//]: # (            @AuthenticationPrincipal Member member,)
+
+[//]: # (            @RequestParam Long boardId,)
+
+[//]: # (            Model model, RedirectAttributes redirectAttributes, HttpServletRequest request&#41; throws Exception {)
+
+[//]: # (        Board board = boardService.findById&#40;boardId&#41;;)
+
+[//]: # (        postBoardDto.setUuid&#40;board.getUuid&#40;&#41;&#41;;)
+
+[//]: # ()
+[//]: # (        Map<String, String> errors = new HashMap<>&#40;&#41;;)
+
+[//]: # (        errors.put&#40;"title", "제목 값이 비어있습니다."&#41;;)
+
+[//]: # (        errors.put&#40;"nickname", "닉네임 값이 비어있습니다."&#41;;)
+
+[//]: # (        errors.put&#40;"password", "비밀번호 값이 비어있습니다."&#41;;)
+
+[//]: # (        errors.put&#40;"content", "내용 값이 비어있습니다."&#41;;)
+
+[//]: # (        //그 필드 검증에 에러가 생기면 errorMessage 를 redirect 해서 다시 보낸다.)
+
+[//]: # (        for &#40;String key : errors.keySet&#40;&#41;&#41; {)
+
+[//]: # (            if &#40;bindingResult.hasFieldErrors&#40;key&#41;&#41; {)
+
+[//]: # (                redirectErrorMessage&#40;redirectAttributes, errors.get&#40;key&#41;, postBoardDto&#41;;)
+
+[//]: # (                return "redirect:/board/edit/" + boardId;)
+
+[//]: # (            })
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        //자신의 글이 맞는지 확인, 로그인이 안돼있으면 비밀번호 확인)
+
+[//]: # (        if &#40;StringUtils.isEmpty&#40;board.getEmail&#40;&#41;&#41;&#41; {)
+
+[//]: # (            if &#40;!board.getPassword&#40;&#41;.equals&#40;postBoardDto.getPassword&#40;&#41;&#41;&#41; {)
+
+[//]: # (                redirectErrorMessage&#40;redirectAttributes, "비밀번호가 맞지 않습니다.", postBoardDto&#41;;)
+
+[//]: # (                return "redirect:/board/edit/" + boardId;)
+
+[//]: # (            })
+
+[//]: # (        } else {)
+
+[//]: # (            if &#40;Optional.ofNullable&#40;member&#41;.isEmpty&#40;&#41; || !board.getEmail&#40;&#41;.equals&#40;member.getEmail&#40;&#41;&#41;&#41; {)
+
+[//]: # (                redirectErrorMessage&#40;redirectAttributes, "글을 수정할 권한이 없습니다.", postBoardDto&#41;;)
+
+[//]: # (                return "error/403";)
+
+[//]: # (            })
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        //login 안했으면 nickname 에 ip 부여)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;member&#41;.isEmpty&#40;&#41;&#41; {)
+
+[//]: # (            postBoardDto.setNickname&#40;postBoardDto.getNickname&#40;&#41; + "&#40;" + ipService.getClientIP&#40;request&#41; + "&#41;"&#41;;)
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        //글수정 성공)
+
+[//]: # (        boardService.putBoard&#40;postBoardDto, board&#41;;)
+
+[//]: # (        List<Image> imageList = imageService.findListByUUID&#40;board.getUuid&#40;&#41;&#41;;)
+
+[//]: # (        imageService.imageListSetDeleted&#40;imageList&#41;;)
+
+[//]: # (        imageService.imageListSetBoard&#40;board, imageList&#41;;)
+
+[//]: # (        return "redirect:/board";)
+
+[//]: # (    })
+
+[//]: # (...)
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (## Get Code)
+
+[//]: # (```java)
+
+[//]: # (/**)
+
+[//]: # (     * 글 목록보기)
+
+[//]: # (     */)
+
+[//]: # (    @RequestMapping&#40;method = RequestMethod.GET&#41;)
+
+[//]: # (    public String board&#40;)
+
+[//]: # (            Model model,)
+
+[//]: # (            @PageableDefault&#40;size = 20&#41; Pageable pageable&#41; {)
+
+[//]: # (        Page<BoardDto.getQuery> page = boardService.getBoardList&#40;pageable&#41;;)
+
+[//]: # ()
+[//]: # (        List<BoardDto.getQuery> boardDTOList = page.getContent&#40;&#41;;)
+
+[//]: # ()
+[//]: # (        BoardDto.page boardPageDto = BoardDto.page.builder&#40;&#41;)
+
+[//]: # (                .total&#40;page.getTotalPages&#40;&#41;&#41;)
+
+[//]: # (                .page&#40;page.getNumber&#40;&#41;&#41;)
+
+[//]: # (                .build&#40;&#41;;)
+
+[//]: # ()
+[//]: # (        model.addAttribute&#40;"boardDTOList", boardDTOList&#41;;)
+
+[//]: # (        model.addAttribute&#40;"boardPageDto", boardPageDto&#41;;)
+
+[//]: # (        return "board/board";)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    /**)
+
+[//]: # (     * 글 상세보기)
+
+[//]: # (     */)
+
+[//]: # (    @RequestMapping&#40;value = "/getBoard/{id}", method = RequestMethod.GET&#41;)
+
+[//]: # (    public String getBoard&#40;)
+
+[//]: # (            @PathVariable&#40;name = "id"&#41; Long id,)
+
+[//]: # (            Model model&#41; throws Exception {)
+
+[//]: # (        //id 로 board 를 찾고 getBoardDto 에 필요한 값을 넣고 생성한다.)
+
+[//]: # (        Board board = boardService.findById&#40;id&#41;;)
+
+[//]: # (        String email;)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;board.getMember&#40;&#41;&#41;.isEmpty&#40;&#41;&#41; email = null;)
+
+[//]: # (        else email = board.getMember&#40;&#41;.getEmail&#40;&#41;;)
+
+[//]: # ()
+[//]: # (        BoardDto.get getBoardDto = BoardDto.get.builder&#40;&#41;.)
+
+[//]: # (                id&#40;board.getId&#40;&#41;&#41;.)
+
+[//]: # (                email&#40;board.getEmail&#40;&#41;&#41;.)
+
+[//]: # (                title&#40;board.getTitle&#40;&#41;&#41;.)
+
+[//]: # (                content&#40;board.getContent&#40;&#41;&#41;.)
+
+[//]: # (                nickname&#40;board.getNickname&#40;&#41;&#41;.build&#40;&#41;;)
+
+[//]: # ()
+[//]: # (        //board 의 commentList 를 구하고 board 에 댓글이 있을 경우에만 실행)
+
+[//]: # (        List<Comment> commentList = board.getCommentList&#40;&#41;;)
+
+[//]: # (        List<CommentDto.get> getCommentDtoList = new ArrayList<>&#40;&#41;;)
+
+[//]: # (        BoardDto.page pageDto = new BoardDto.page&#40;&#41;;)
+
+[//]: # (        if &#40;!commentList.isEmpty&#40;&#41;&#41; {)
+
+[//]: # (            //pages = 0 : startId, 1 : limit, 2 : totalPage)
+
+[//]: # (            List<Integer> pages = commentControllerService.findCommentStartIdAndLimit&#40;0, 50, board.getCommentList&#40;&#41;&#41;;)
+
+[//]: # (            //댓글이 startId 에서 시작해서 limit 로 끝나는 Query 로 filter_commentList 를 구한다.)
+
+[//]: # (            List<Comment> filter_commentList = commentService.getCommentList&#40;pages.get&#40;0&#41;, pages.get&#40;1&#41;, board&#41;;)
+
+[//]: # (            //filter_commentList 를 getCommentDtoList 로 바꾸는 작업을 한다.&#40;또한 댓글들을 올바르게 정렬&#41;)
+
+[//]: # (            getCommentDtoList = commentControllerService.convertGetCommentListDto&#40;filter_commentList&#41;;)
+
+[//]: # (            pageDto.setTotal&#40;pages.get&#40;2&#41;&#41;;)
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        model.addAttribute&#40;"getBoardDto", getBoardDto&#41;;)
+
+[//]: # (        model.addAttribute&#40;"commentList", getCommentDtoList&#41;;)
+
+[//]: # (        model.addAttribute&#40;"commentDto", new CommentDto.get&#40;&#41;&#41;;)
+
+[//]: # (        model.addAttribute&#40;"commentPageDto", pageDto&#41;;)
+
+[//]: # (        model.addAttribute&#40;"boardId", id&#41;;)
+
+[//]: # ()
+[//]: # (        return "board/getBoard";)
+
+[//]: # (    })
+
+[//]: # (...)
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (## Delete Code)
+
+[//]: # (```java)
+
+[//]: # (/**)
+
+[//]: # (     * 글삭제)
+
+[//]: # (     */)
+
+[//]: # (    @RequestMapping&#40;value = "/delete/{boardId}"&#41;)
+
+[//]: # (    public String delete&#40;)
+
+[//]: # (            @PathVariable&#40;name = "boardId"&#41; Long boardId,)
+
+[//]: # (            @AuthenticationPrincipal Member member,)
+
+[//]: # (            Model model&#41; throws Exception {)
+
+[//]: # (        Board board = boardService.findById&#40;boardId&#41;;)
+
+[//]: # ()
+[//]: # (        //자신의 글이 맞는지 확인)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;board.getEmail&#40;&#41;&#41;.isPresent&#40;&#41;&#41; {)
+
+[//]: # (            if &#40;Optional.ofNullable&#40;member&#41;.isEmpty&#40;&#41;&#41; {)
+
+[//]: # (                if &#40;!member.getEmail&#40;&#41;.equals&#40;board.getEmail&#40;&#41;&#41;&#41; {)
+
+[//]: # (                    model.addAttribute&#40;"errorMessage", "글을 삭제할 권한이 없습니다"&#41;;)
+
+[//]: # (                    return "error/403";)
+
+[//]: # (                })
+
+[//]: # (            })
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        model.addAttribute&#40;"boardId", boardId&#41;;)
+
+[//]: # (        model.addAttribute&#40;"boardEmail", board.getEmail&#40;&#41;&#41;;)
+
+[//]: # (        model.addAttribute&#40;"deleteBoardDto", new BoardDto.delete&#40;&#41;&#41;;)
+
+[//]: # (        return "board/delete";)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @RequestMapping&#40;value = "/delete", method = RequestMethod.POST&#41;)
+
+[//]: # (    public String deletePost&#40;)
+
+[//]: # (            @ModelAttribute BoardDto.delete deleteBoardDto,)
+
+[//]: # (            @RequestParam Long boardId,)
+
+[//]: # (            @AuthenticationPrincipal Member member,)
+
+[//]: # (            Model model, RedirectAttributes redirectAttributes&#41; throws Exception {)
+
+[//]: # (        Board board = boardService.findById&#40;boardId&#41;;)
+
+[//]: # ()
+[//]: # (        //자신의 글이 맞는지 확인)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;board.getEmail&#40;&#41;&#41;.isPresent&#40;&#41;&#41; {)
+
+[//]: # (            if &#40;Optional.ofNullable&#40;member&#41;.isEmpty&#40;&#41;&#41; {)
+
+[//]: # (                if &#40;!member.getEmail&#40;&#41;.equals&#40;board.getEmail&#40;&#41;&#41;&#41; {)
+
+[//]: # (                    model.addAttribute&#40;"errorMessage", "글을 삭제할 권한이 없습니다"&#41;;)
+
+[//]: # (                    return "error/403";)
+
+[//]: # (                })
+
+[//]: # (            })
+
+[//]: # (        } else {)
+
+[//]: # (            if &#40;!board.getPassword&#40;&#41;.equals&#40;deleteBoardDto.getPassword&#40;&#41;&#41;&#41; {)
+
+[//]: # (                redirectAttributes.addFlashAttribute&#40;"errorMessage", "비밀번호가 맞지 않습니다."&#41;;)
+
+[//]: # (                return "redirect:/board/delete/" + boardId;)
+
+[//]: # (            })
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        boardService.deleteBoard&#40;board&#41;;)
+
+[//]: # (        return "redirect:/board";)
+
+[//]: # (    })
+
+[//]: # (...)
+
+[//]: # (```)
