--- a/_posts/temp_trash_can/프로젝트/community/2022-01-17-로그인.md
+++ b/_posts/temp_trash_can/프로젝트/community/2022-01-17-로그인.md
@@ -1,178 +1,316 @@
----
-title: "로그인"
-categories: project_community
----
+[//]: # (---)
 
-[1. Spring Security를 이용한 로그인 구현](#spring-security를-이용한-로그인-구현)  
-[2. AuthenticationFailureHandler를 이용한 로그인 실패 로직 구현](#authenticationfailurehandler를-이용한-로그인-실패-로직-구현)
+[//]: # (title: "로그인")
 
-## Spring Security를 이용한 로그인 구현
-+ Spring Security를 이용하기 위해 사용자 인증할 객체에 UserDetails를 인터페이스한다.
-```java
-@Entity
-@Getter
-@NoArgsConstructor(access = AccessLevel.PROTECTED)
-public class Member implements UserDetails {
+[//]: # (categories: project_community)
 
-    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @Column(name = "member_id")
-    private Long id;
+[//]: # (---)
 
-    @NotEmpty
-    @Email
-    @Column(unique = true)
-    private String email;
+[//]: # ()
+[//]: # ([1. Spring Security를 이용한 로그인 구현]&#40;#spring-security를-이용한-로그인-구현&#41;  )
 
-    @NotEmpty
-    private String password;
+[//]: # ([2. AuthenticationFailureHandler를 이용한 로그인 실패 로직 구현]&#40;#authenticationfailurehandler를-이용한-로그인-실패-로직-구현&#41;)
 
-    @NotEmpty
-    private String nickname;
+[//]: # ()
+[//]: # (## Spring Security를 이용한 로그인 구현)
 
-    @Transient
-    private List<Role> roles = new ArrayList<>();
+[//]: # (+ Spring Security를 이용하기 위해 사용자 인증할 객체에 UserDetails를 인터페이스한다.)
 
-    @OneToMany(mappedBy = "member", cascade = CascadeType.ALL)
-    private List<Board> boardList = new ArrayList<>();
+[//]: # (```java)
 
-    @OneToMany(mappedBy = "member", cascade = CascadeType.ALL)
-    private List<Comment> commentList = new ArrayList<>();
+[//]: # (@Entity)
 
-    @OneToMany(mappedBy = "member", cascade = CascadeType.ALL)
-    private List<Member_Authority> memberAuthorities = new ArrayList<>();
+[//]: # (@Getter)
 
-    @Builder
-    public Member(Long id, String email, String password, String nickname) {
-        this.id = id;
-        this.email = email;
-        this.password = password;
-        this.nickname = nickname;
-    }
+[//]: # (@NoArgsConstructor&#40;access = AccessLevel.PROTECTED&#41;)
 
-    public void setRoles() {
-        for (Member_Authority memberAuthority : this.memberAuthorities) {
-            this.roles.add(memberAuthority.getAuthority().getRole());
-        }
-    }
+[//]: # (public class Member implements UserDetails {)
 
-    public void setMemberAuthorities(Member_Authority memberAuthorities) {
-        this.memberAuthorities.add(memberAuthorities);
-    }
+[//]: # ()
+[//]: # (    @Id @GeneratedValue&#40;strategy = GenerationType.IDENTITY&#41;)
 
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        Set<GrantedAuthority> grantedAuthorities = new HashSet<>();
-        for (Role role : roles) {
-            grantedAuthorities.add(new SimpleGrantedAuthority(role.toString()));
-        }
-        return grantedAuthorities;
-    }
+[//]: # (    @Column&#40;name = "member_id"&#41;)
 
-    @Override
-    public String getUsername() {
-        return email;
-    }
+[//]: # (    private Long id;)
 
-    @Override
-    public String getPassword() {
-        return password;
-    }
+[//]: # ()
+[//]: # (    @NotEmpty)
 
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
+[//]: # (    @Email)
 
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
+[//]: # (    @Column&#40;unique = true&#41;)
 
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
+[//]: # (    private String email;)
 
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
+[//]: # ()
+[//]: # (    @NotEmpty)
 
-    //값 변경
-    public void setNickname(String nickname) {
-        this.nickname = nickname;
-    }
+[//]: # (    private String password;)
 
-    public void setPassword(String password) { this.password = password; }
-}
-```
+[//]: # ()
+[//]: # (    @NotEmpty)
 
-+ UserDetailsService는 사용자 이름(username)을 기반으로 사용자 객체를 가져온다
-```java
-@RequiredArgsConstructor
-@Service
-@Transactional(readOnly = true)
-public class MemberService implements UserDetailsService {
+[//]: # (    private String nickname;)
 
-    private final MemberRepository memberRepository;
-    private final AuthorityRepository authorityRepository;
+[//]: # ()
+[//]: # (    @Transient)
 
-    @Value("${Role.User}")
-    private String ROLE_USER;
+[//]: # (    private List<Role> roles = new ArrayList<>&#40;&#41;;)
 
-    @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        Member member = memberRepository.findByEmail(username)
-                .orElseThrow(() -> new UsernameNotFoundException(username));
-        member.setRoles();
+[//]: # ()
+[//]: # (    @OneToMany&#40;mappedBy = "member", cascade = CascadeType.ALL&#41;)
 
-        return member;
-    }
-  ...
-```
+[//]: # (    private List<Board> boardList = new ArrayList<>&#40;&#41;;)
 
-## AuthenticationFailureHandler를 이용한 로그인 실패 로직 구현
-+ AuthenticationFailureHandler는 로그인에 실패했을 때 부가적인 작업을 할 수 있는 인터페이스다.
-```java
-@Service
-@RequiredArgsConstructor
-public class UserLoginFailHandler implements AuthenticationFailureHandler {
+[//]: # ()
+[//]: # (    @OneToMany&#40;mappedBy = "member", cascade = CascadeType.ALL&#41;)
 
-    private final MessageSource messageSource;
+[//]: # (    private List<Comment> commentList = new ArrayList<>&#40;&#41;;)
 
-    @Override
-    public void onAuthenticationFailure(HttpServletRequest request,
-                                        HttpServletResponse response,
-                                        AuthenticationException exception) throws IOException, ServletException {
+[//]: # ()
+[//]: # (    @OneToMany&#40;mappedBy = "member", cascade = CascadeType.ALL&#41;)
 
-        String errMessage = exception.getMessage();
+[//]: # (    private List<Member_Authority> memberAuthorities = new ArrayList<>&#40;&#41;;)
 
-        if (exception instanceof AuthenticationServiceException) {
-            errMessage = messageSource.getMessage("login.error.ase", null, null);
-        } else if (exception instanceof BadCredentialsException) {
-            errMessage = messageSource.getMessage("login.error.bce", null, null);
-        } else if (exception instanceof LockedException) {
-            errMessage = messageSource.getMessage("login.error.le", null, null);
-        } else if (exception instanceof DisabledException) {
-            errMessage = messageSource.getMessage("login.error.de", null, null);
-        } else if (exception instanceof AccountExpiredException) {
-            errMessage = messageSource.getMessage("login.error.aee", null, null);
-        } else if (exception instanceof CredentialsExpiredException) {
-            errMessage = messageSource.getMessage("login.error.cee", null, null);
-        }
+[//]: # ()
+[//]: # (    @Builder)
 
-        request.setAttribute("errorMessage", errMessage);
+[//]: # (    public Member&#40;Long id, String email, String password, String nickname&#41; {)
 
-        request.getRequestDispatcher("/login").forward(request, response);
-    }
-}
-```
-+ 로그인 에러 메시지를 모은 message.properties
+[//]: # (        this.id = id;)
 
+[//]: # (        this.email = email;)
 
-![1](https://user-images.githubusercontent.com/48073115/149674453-7aa022dc-611a-41b0-a14c-85289911a794.png)
+[//]: # (        this.password = password;)
 
-+ errorMessage가 나올 Thymeleaf 로직
+[//]: # (        this.nickname = nickname;)
 
+[//]: # (    })
 
-![1](https://user-images.githubusercontent.com/48073115/149674512-544fdf71-3b45-49b6-9a33-69e2a36df903.png)
+[//]: # ()
+[//]: # (    public void setRoles&#40;&#41; {)
+
+[//]: # (        for &#40;Member_Authority memberAuthority : this.memberAuthorities&#41; {)
+
+[//]: # (            this.roles.add&#40;memberAuthority.getAuthority&#40;&#41;.getRole&#40;&#41;&#41;;)
+
+[//]: # (        })
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    public void setMemberAuthorities&#40;Member_Authority memberAuthorities&#41; {)
+
+[//]: # (        this.memberAuthorities.add&#40;memberAuthorities&#41;;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public Collection<? extends GrantedAuthority> getAuthorities&#40;&#41; {)
+
+[//]: # (        Set<GrantedAuthority> grantedAuthorities = new HashSet<>&#40;&#41;;)
+
+[//]: # (        for &#40;Role role : roles&#41; {)
+
+[//]: # (            grantedAuthorities.add&#40;new SimpleGrantedAuthority&#40;role.toString&#40;&#41;&#41;&#41;;)
+
+[//]: # (        })
+
+[//]: # (        return grantedAuthorities;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public String getUsername&#40;&#41; {)
+
+[//]: # (        return email;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public String getPassword&#40;&#41; {)
+
+[//]: # (        return password;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public boolean isAccountNonExpired&#40;&#41; {)
+
+[//]: # (        return true;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public boolean isAccountNonLocked&#40;&#41; {)
+
+[//]: # (        return true;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public boolean isCredentialsNonExpired&#40;&#41; {)
+
+[//]: # (        return true;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public boolean isEnabled&#40;&#41; {)
+
+[//]: # (        return true;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    //값 변경)
+
+[//]: # (    public void setNickname&#40;String nickname&#41; {)
+
+[//]: # (        this.nickname = nickname;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    public void setPassword&#40;String password&#41; { this.password = password; })
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (+ UserDetailsService는 사용자 이름&#40;username&#41;을 기반으로 사용자 객체를 가져온다)
+
+[//]: # (```java)
+
+[//]: # (@RequiredArgsConstructor)
+
+[//]: # (@Service)
+
+[//]: # (@Transactional&#40;readOnly = true&#41;)
+
+[//]: # (public class MemberService implements UserDetailsService {)
+
+[//]: # ()
+[//]: # (    private final MemberRepository memberRepository;)
+
+[//]: # (    private final AuthorityRepository authorityRepository;)
+
+[//]: # ()
+[//]: # (    @Value&#40;"${Role.User}"&#41;)
+
+[//]: # (    private String ROLE_USER;)
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public UserDetails loadUserByUsername&#40;String username&#41; throws UsernameNotFoundException {)
+
+[//]: # (        Member member = memberRepository.findByEmail&#40;username&#41;)
+
+[//]: # (                .orElseThrow&#40;&#40;&#41; -> new UsernameNotFoundException&#40;username&#41;&#41;;)
+
+[//]: # (        member.setRoles&#40;&#41;;)
+
+[//]: # ()
+[//]: # (        return member;)
+
+[//]: # (    })
+
+[//]: # (  ...)
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (## AuthenticationFailureHandler를 이용한 로그인 실패 로직 구현)
+
+[//]: # (+ AuthenticationFailureHandler는 로그인에 실패했을 때 부가적인 작업을 할 수 있는 인터페이스다.)
+
+[//]: # (```java)
+
+[//]: # (@Service)
+
+[//]: # (@RequiredArgsConstructor)
+
+[//]: # (public class UserLoginFailHandler implements AuthenticationFailureHandler {)
+
+[//]: # ()
+[//]: # (    private final MessageSource messageSource;)
+
+[//]: # ()
+[//]: # (    @Override)
+
+[//]: # (    public void onAuthenticationFailure&#40;HttpServletRequest request,)
+
+[//]: # (                                        HttpServletResponse response,)
+
+[//]: # (                                        AuthenticationException exception&#41; throws IOException, ServletException {)
+
+[//]: # ()
+[//]: # (        String errMessage = exception.getMessage&#40;&#41;;)
+
+[//]: # ()
+[//]: # (        if &#40;exception instanceof AuthenticationServiceException&#41; {)
+
+[//]: # (            errMessage = messageSource.getMessage&#40;"login.error.ase", null, null&#41;;)
+
+[//]: # (        } else if &#40;exception instanceof BadCredentialsException&#41; {)
+
+[//]: # (            errMessage = messageSource.getMessage&#40;"login.error.bce", null, null&#41;;)
+
+[//]: # (        } else if &#40;exception instanceof LockedException&#41; {)
+
+[//]: # (            errMessage = messageSource.getMessage&#40;"login.error.le", null, null&#41;;)
+
+[//]: # (        } else if &#40;exception instanceof DisabledException&#41; {)
+
+[//]: # (            errMessage = messageSource.getMessage&#40;"login.error.de", null, null&#41;;)
+
+[//]: # (        } else if &#40;exception instanceof AccountExpiredException&#41; {)
+
+[//]: # (            errMessage = messageSource.getMessage&#40;"login.error.aee", null, null&#41;;)
+
+[//]: # (        } else if &#40;exception instanceof CredentialsExpiredException&#41; {)
+
+[//]: # (            errMessage = messageSource.getMessage&#40;"login.error.cee", null, null&#41;;)
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        request.setAttribute&#40;"errorMessage", errMessage&#41;;)
+
+[//]: # ()
+[//]: # (        request.getRequestDispatcher&#40;"/login"&#41;.forward&#40;request, response&#41;;)
+
+[//]: # (    })
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # (+ 로그인 에러 메시지를 모은 message.properties)
+
+[//]: # ()
+[//]: # ()
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149674453-7aa022dc-611a-41b0-a14c-85289911a794.png&#41;)
+
+[//]: # ()
+[//]: # (+ errorMessage가 나올 Thymeleaf 로직)
+
+[//]: # ()
+[//]: # ()
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149674512-544fdf71-3b45-49b6-9a33-69e2a36df903.png&#41;)
