--- a/_posts/temp_trash_can/프로젝트/community/2022-01-18-대댓글 구현.md
+++ b/_posts/temp_trash_can/프로젝트/community/2022-01-18-대댓글 구현.md
@@ -1,378 +1,715 @@
----
-title: "대댓글 구현"
-categories: project_community
----
+[//]: # (---)
 
-[1. Comment Entity 구현](#comment-entity-구현)  
-[2. Comment Save 구현](#comment-save-구현)  
-[3. Comment Sort 구현](#comment-sort-구현)  
-[4. Comment Delete 구현](#comment-delete-구현)  
-[5. SweetAlert2를 이용한 삭제창 구현](#sweetalert2를-이용한-삭제창-구현)
+[//]: # (title: "대댓글 구현")
 
-## Comment Entity 구현
-```java
-@Entity
-@Getter
-@NoArgsConstructor(access = AccessLevel.PROTECTED)
-public class Comment {
+[//]: # (categories: project_community)
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @Column(name = "comment_id")
-    private Long id;
-    private Long groupId;
+[//]: # (---)
 
-    @Max(value = 8)
-    private Long depth;
+[//]: # ()
+[//]: # ([1. Comment Entity 구현]&#40;#comment-entity-구현&#41;  )
 
-    @NotEmpty
-    private String nickname;
-    private String password;
+[//]: # ([2. Comment Save 구현]&#40;#comment-save-구현&#41;  )
 
-    @Enumerated(value = EnumType.STRING)
-    private DeleteStatus deleteStatus;
+[//]: # ([3. Comment Sort 구현]&#40;#comment-sort-구현&#41;  )
 
-    @NotEmpty
-    @Lob
-    private String content;
-    private LocalDateTime createTime;
+[//]: # ([4. Comment Delete 구현]&#40;#comment-delete-구현&#41;  )
 
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "member_id")
-    private Member member;
+[//]: # ([5. SweetAlert2를 이용한 삭제창 구현]&#40;#sweetalert2를-이용한-삭제창-구현&#41;)
 
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "board_id")
-    private Board board;
+[//]: # ()
+[//]: # (## Comment Entity 구현)
 
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "parent_id")
-    private Comment parentComment;
+[//]: # (```java)
 
-    @OneToMany(mappedBy = "parentComment", orphanRemoval = true)
-    private List<Comment> children = new ArrayList<>();
+[//]: # (@Entity)
 
-    @Builder
-    public Comment(Long id, Long groupId, String nickname, String password, DeleteStatus deleteStatus, String content,
-                   LocalDateTime createTime, Member member, Board board, Comment parentComment, Long depth) {
-        this.id = id;
-        this.groupId = groupId;
-        this.nickname = nickname;
-        this.password = password;
-        this.deleteStatus = deleteStatus;
-        this.content = content;
-        this.createTime = createTime;
-        this.member = member;
-        this.board = board;
-        this.parentComment = parentComment;
-        this.depth = depth;
-    }
+[//]: # (@Getter)
 
-    //값 변경
-    public void setGroupId(Long id) {
-        this.groupId = id;
-    }
+[//]: # (@NoArgsConstructor&#40;access = AccessLevel.PROTECTED&#41;)
 
-    public void setDeleteStatus(DeleteStatus deleteStatus) {
-        this.deleteStatus = deleteStatus;
-    }
+[//]: # (public class Comment {)
 
-    public void setNickname(String nickname) {
-        this.nickname = nickname;
-    }
+[//]: # ()
+[//]: # (    @Id)
 
-    public void setContent(String content) {
-        this.content = content;
-    }
-}
-```
+[//]: # (    @GeneratedValue&#40;strategy = GenerationType.IDENTITY&#41;)
 
-+ groupId : 대댓글의 대표 ID를 지정, 보통 최상위 즉 부모가 없는 댓글의 ID를 지정함.
-+ depth : 대댓글의 깊이가 어느정도인지 알려줌. 보통 댓글들을 들여쓰기할 때 사용함.
-+ deleteStatus : 댓글의 저장상태를 알려줌. 자식 댓글이 있는데 부모 댓글을 그냥 삭제할 수 없기에 대신 부모 댓글의 저장상태를 삭제상태로 바꿈
-+ parentComment : 부모댓글
-+ children : 자식댓글
+[//]: # (    @Column&#40;name = "comment_id"&#41;)
 
-## Comment Save 구현
-```java
-@Transactional
-public Long save(Long boardId, CommentDto.get commentDto, Long parentId, Member member) {
-    Optional<Board> board = boardRepository.findById(boardId);
-    //boardId 에 board 객체가 없다면 comment 를 저장할 수 없으니 종료한다.
-    if (board.isEmpty()) return null;
+[//]: # (    private Long id;)
 
-    Optional<Comment> parentComment = Optional.empty();
-    Long groupId = null;
-    Long depth = 0L;
-    //parentId 가 null 이 아닐 경우 parentComment 를 찾는다.
-    //parentComment 가 존재하면 대댓글의 root(댓글)의 id 를 groupId 로 넣는다.
-    if (parentId != null) {
-        parentComment = commentRepository.findById(parentId);
-        if (parentComment.isPresent()) {
-            groupId = parentComment.get().getGroupId();
-            depth = parentComment.get().getDepth();
-            if (depth < 8) depth++;
-        }
-    }
-    //댓글 저장
-    Comment comment = Comment.builder()
-            .groupId(groupId)
-            .depth(depth)
-            .nickname(commentDto.getNickname())
-            .password(commentDto.getPassword())
-            .content(commentDto.getContent())
-            .createTime(LocalDateTime.now())
-            .deleteStatus(DeleteStatus.Stored)
-            .member(member)
-            .board(board.get())
-            .parentComment(parentComment.orElse(null))
-            .build();
+[//]: # (    private Long groupId;)
 
-    commentRepository.save(comment);
+[//]: # ()
+[//]: # (    @Max&#40;value = 8&#41;)
 
-    Long commentId = comment.getId();
+[//]: # (    private Long depth;)
 
-    //대댓글이 아닐경우 자신의 id를 groupId에 대입
-    if (parentId == null) {
-        comment.setGroupId(commentId);
-    }
+[//]: # ()
+[//]: # (    @NotEmpty)
 
-    return commentId;
-}
-...
-```
+[//]: # (    private String nickname;)
 
-## Comment Sort 구현
-### Controller
-```java
-if (!commentList.isEmpty()) {
-    //pages = 0 : startId, 1 : limit, 2 : totalPage
-    List<Integer> pages = findCommentStartIdAndLimit(page, 50, board.getCommentList());
-    //댓글이 startId 에서 시작해서 limit 로 끝나는 Query 로 filter_commentList 를 구한다.
-    List<Comment> filter_commentList = commentService.getCommentList(pages.get(0), pages.get(1), board);
-    //filter_commentList 를 getCommentDtoList 로 바꾸는 작업을 한다.(또한 댓글들을 올바르게 정렬)
-    getCommentDtoList = convertGetCommentListDto(filter_commentList);
-    pageDto.setPage(page);
-    pageDto.setTotal(pages.get(2));
-}
-...
-```
+[//]: # (    private String password;)
 
-### findCommentStrartIdAndLimit
-```java
-private List<Integer> findCommentStartIdAndLimit(int page, int size, List<Comment> commentList) {
-    if (commentList.isEmpty()) return null;
-    Map<Long, Integer> commentCount = new LinkedHashMap<>();
-    //대댓글이 아닌 댓글을 표시하는 groupId 를 key, 그 안에 대댓글이 얼마나 들어 있는지 세는 count 를 value 로 놓는다.
-    for (Comment comment : commentList) {
-        commentCount.put(comment.getGroupId(), commentCount.getOrDefault(comment.getGroupId(), 0) + 1);
-    }
-    //map 을 key 로 정렬한다.
-    Map<Long, Integer> result = sortMapByKey(commentCount);
-    //앞에서 구한 map 을 가지고 시작할 commentId, Limit 를 가진 List 를 반환한다.
-    return getCommentStartIdAndLimit(page, size, result);
-}
-```
-#### sortMapByKey
-```java
-private static LinkedHashMap<Long, Integer> sortMapByKey(Map<Long, Integer> map) {
-    List<Map.Entry<Long, Integer>> entries = new LinkedList<>(map.entrySet());
-    entries.sort(Map.Entry.comparingByKey());
+[//]: # ()
+[//]: # (    @Enumerated&#40;value = EnumType.STRING&#41;)
 
-    LinkedHashMap<Long, Integer> result = new LinkedHashMap<>();
-    for (Map.Entry<Long, Integer> entry : entries) {
-        result.put(entry.getKey(), entry.getValue());
-    }
-    return result;
-}
-```
-#### getCommentStartIdAndLimit
-```java
-private List<Integer> getCommentStartIdAndLimit(int page, int size, Map<Long, Integer> result) {
-    int presentPage = -1;
-    int presentLimit = size;
-    int sum = 0;
-    Long startId = null;
+[//]: # (    private DeleteStatus deleteStatus;)
 
-    for (Map.Entry<Long, Integer> entry : result.entrySet()) {
-        //page 에서 처음 시작했을때 prentPage 를 올리고 현재 페이지인 경우 첫번째 id 를 가져온다.
-        if (sum == 0) {
-            presentPage++;
-            if (presentPage == page) {
-                startId = entry.getKey();
-            }
-        }
-        //조건이 만족할 때 까지 sum 에 대댓글이 포함된 댓글의 수를 더한다.
-        sum += entry.getValue();
-        //현재 page 의 limit 를 sum 이 넘으면 page 를 추가한다.
-        if (size <= sum) {
-            //현재 page 인 경우 presentLimit 를 현 페이지의 댓글 수인 sum 만큼 limit 를 지정한다.
-            if (presentPage == page) {
-                presentLimit = sum;
-            }
-            sum = 0;
-        }
-        //끝까지 돌리는 이유는 totalPage 를 구하기 위해서다.
-    }
-    List<Integer> output = new ArrayList<>();
-    output.add(startId.intValue());
-    output.add(presentLimit);
-    output.add(presentPage);
+[//]: # ()
+[//]: # (    @NotEmpty)
 
-    return output;
-}
-```
+[//]: # (    @Lob)
 
-### commentService.getCommentList
-```java
-public List<Comment> getCommentList(int startId, int limit, Board board) {
-    return commentRepository.getCommentList(startId, limit, board);
-}
-```
-#### getCommentList
-```java
-@Override
-public List<Comment> getCommentList(int id, int limit, Board board) {
-    return queryFactory
-            .selectFrom(comment)
-            .leftJoin(comment.parentComment)
-            .fetchJoin()
-            .where(
-                    comment.board.eq(board),
-                    comment.id.goe(id)
-            )
-            .orderBy(
-                    comment.groupId.asc(),
-                    comment.id.asc()
-            )
-            .limit(limit)
-            .fetch();
-}
-```
+[//]: # (    private String content;)
 
-### convertGetCommentListDto
-```java
-private List<CommentDto.get> convertGetCommentListDto(List<Comment> commentList) throws Exception {
-    List<CommentDto.get> result = new ArrayList<>();
-    //Comment 를 GetCommentDto 로 바꾸고 GetCommentDto.children 에 자식 댓글들을 저장해 중첩 구조로 만든다.
-    //comments 에 대댓글이 아닌 댓글들이 저장되어 있다.
-    List<CommentDto.get> comments = createNestedStructure(commentList);
-    //comments 에서 재귀함수로 댓글들을 순서대로 result 에 넣는다.
-    recursionNestedComment(comments, result);
-    return result;
-}
-```
-#### createNestedStructure
-```java
-private List<CommentDto.get> createNestedStructure(List<Comment> commentList) throws Exception {
-    List<CommentDto.get> result = new ArrayList<>();
-    Map<Long, CommentDto.get> map = new HashMap<>();
+[//]: # (    private LocalDateTime createTime;)
 
-    for (Comment comment : commentList) {
-        CommentDto.get commentDto = new CommentDto.get();
-        commentDto.convertFrom(comment);
+[//]: # ()
+[//]: # (    @ManyToOne&#40;fetch = FetchType.LAZY&#41;)
 
-        map.put(commentDto.getId(), commentDto);
-        //대댓글이 아닌 경우 result list 에 추가한다. 맞을 경우 부모 댓글 dto 의 children 에 저장한다
-        if (Optional.ofNullable(comment.getParentComment()).isPresent()) {
-            map.get(comment.getParentComment().getId()).getChildren().add(commentDto);
-        } else result.add(commentDto);
-    }
-    //depth 0 인 대댓글이 아닌 댓글들을 저장한 리스트를 반환한다.
-    return result;
-}
-```
-#### recursionNestedComment
-```java
-private void recursionNestedComment(List<CommentDto.get> commentList, List<CommentDto.get> result) {
-    for (CommentDto.get comment : commentList) {
-        result.add(comment);
-        if (!Optional.ofNullable(comment.getChildren()).isEmpty()) {
-            recursionNestedComment(comment.getChildren(), result);
-        }
-    }
-}
-```
+[//]: # (    @JoinColumn&#40;name = "member_id"&#41;)
 
-## Comment Delete 구현
-### 
-```java
-@Transactional
-public void deleteByComment(Comment comment) {
-    if (comment.getChildren().size() != 0) {
-        comment.setDeleteStatus(DeleteStatus.Deleted);
-    } else {
-        commentRepository.deleteById(recursionDeleteComment(comment));
-    }
-}
-```
-#### recursionDeleteComment
-```java
-private Long recursionDeleteComment(Comment comment) {
-    Comment parentComment = comment.getParentComment();
+[//]: # (    private Member member;)
 
-    //부모가 1개이고 삭제 상태이면 삭제해도 문제 없기에 부모의 파라미터로 재귀한다.
-    //만약 없거나 삭제상태가 아니라면 그 위의 댓글은 삭제할 할 수 없기에 전의 댓글들만 삭제한다.
-    if (Optional.ofNullable(parentComment).isPresent()) {
-        if (parentComment.getChildren().size() == 1 && parentComment.getDeleteStatus() == DeleteStatus.Deleted) {
-            return recursionDeleteComment(parentComment);
-        }
-    }
+[//]: # ()
+[//]: # (    @ManyToOne&#40;fetch = FetchType.LAZY&#41;)
 
-    return comment.getId();
-}
-```
+[//]: # (    @JoinColumn&#40;name = "board_id"&#41;)
 
-## SweetAlert2를 이용한 삭제창 구현
-![1](https://user-images.githubusercontent.com/48073115/149927723-1b363f61-ac56-4835-af45-1f808e022722.png)
+[//]: # (    private Board board;)
 
-```javascript
-$( 'a[name=delete]' ).click(async function() {
-        const id = $(this).data('id');
-        const login = $(this).data('login');
+[//]: # ()
+[//]: # (    @ManyToOne&#40;fetch = FetchType.LAZY&#41;)
 
-        const token = $( "meta[name='_csrf']" ).attr('content');
-        const header = $( "meta[name='_csrf_header']").attr("content");
+[//]: # (    @JoinColumn&#40;name = "parent_id"&#41;)
 
-        let dataJSON;
-        if (login === 'N') {
-            await Swal.fire({
-                title: 'Input Password',
-                input: 'text',
-                icon: 'info',
-                showCancelButton: true
-            }).then((result) => {
-                const data = { "password" : result.value };
-                dataJSON = JSON.stringify(data);
-            });
-        } else {
-            const data = { "password" : "" };
-            dataJSON = JSON.stringify(data);
-        }
-        //input 창에서 cancel 눌렀을 경우 함수 종료
-        if (dataJSON === '{}') {
-            return;
-        }
+[//]: # (    private Comment parentComment;)
 
-        $.ajax({
-            url : "/comment/" + id,
-            method : "DELETE",
-            contentType : "application/json; UTF-8",
-            data : dataJSON,
-            async : false,
-            beforeSend : function(xhr) {
-                xhr.setRequestHeader(header, token);
-            },
-            success : function(result) {
-                location.reload();
-            },
-            error : function(xhr, status, error) {
-                Swal.fire({
-                    icon: 'error',
-                    title: xhr.responseJSON.code,
-                    text: xhr.responseJSON.message
-                  });
-            }
-        });
-});
-```
+[//]: # ()
+[//]: # (    @OneToMany&#40;mappedBy = "parentComment", orphanRemoval = true&#41;)
+
+[//]: # (    private List<Comment> children = new ArrayList<>&#40;&#41;;)
+
+[//]: # ()
+[//]: # (    @Builder)
+
+[//]: # (    public Comment&#40;Long id, Long groupId, String nickname, String password, DeleteStatus deleteStatus, String content,)
+
+[//]: # (                   LocalDateTime createTime, Member member, Board board, Comment parentComment, Long depth&#41; {)
+
+[//]: # (        this.id = id;)
+
+[//]: # (        this.groupId = groupId;)
+
+[//]: # (        this.nickname = nickname;)
+
+[//]: # (        this.password = password;)
+
+[//]: # (        this.deleteStatus = deleteStatus;)
+
+[//]: # (        this.content = content;)
+
+[//]: # (        this.createTime = createTime;)
+
+[//]: # (        this.member = member;)
+
+[//]: # (        this.board = board;)
+
+[//]: # (        this.parentComment = parentComment;)
+
+[//]: # (        this.depth = depth;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    //값 변경)
+
+[//]: # (    public void setGroupId&#40;Long id&#41; {)
+
+[//]: # (        this.groupId = id;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    public void setDeleteStatus&#40;DeleteStatus deleteStatus&#41; {)
+
+[//]: # (        this.deleteStatus = deleteStatus;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    public void setNickname&#40;String nickname&#41; {)
+
+[//]: # (        this.nickname = nickname;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    public void setContent&#40;String content&#41; {)
+
+[//]: # (        this.content = content;)
+
+[//]: # (    })
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (+ groupId : 대댓글의 대표 ID를 지정, 보통 최상위 즉 부모가 없는 댓글의 ID를 지정함.)
+
+[//]: # (+ depth : 대댓글의 깊이가 어느정도인지 알려줌. 보통 댓글들을 들여쓰기할 때 사용함.)
+
+[//]: # (+ deleteStatus : 댓글의 저장상태를 알려줌. 자식 댓글이 있는데 부모 댓글을 그냥 삭제할 수 없기에 대신 부모 댓글의 저장상태를 삭제상태로 바꿈)
+
+[//]: # (+ parentComment : 부모댓글)
+
+[//]: # (+ children : 자식댓글)
+
+[//]: # ()
+[//]: # (## Comment Save 구현)
+
+[//]: # (```java)
+
+[//]: # (@Transactional)
+
+[//]: # (public Long save&#40;Long boardId, CommentDto.get commentDto, Long parentId, Member member&#41; {)
+
+[//]: # (    Optional<Board> board = boardRepository.findById&#40;boardId&#41;;)
+
+[//]: # (    //boardId 에 board 객체가 없다면 comment 를 저장할 수 없으니 종료한다.)
+
+[//]: # (    if &#40;board.isEmpty&#40;&#41;&#41; return null;)
+
+[//]: # ()
+[//]: # (    Optional<Comment> parentComment = Optional.empty&#40;&#41;;)
+
+[//]: # (    Long groupId = null;)
+
+[//]: # (    Long depth = 0L;)
+
+[//]: # (    //parentId 가 null 이 아닐 경우 parentComment 를 찾는다.)
+
+[//]: # (    //parentComment 가 존재하면 대댓글의 root&#40;댓글&#41;의 id 를 groupId 로 넣는다.)
+
+[//]: # (    if &#40;parentId != null&#41; {)
+
+[//]: # (        parentComment = commentRepository.findById&#40;parentId&#41;;)
+
+[//]: # (        if &#40;parentComment.isPresent&#40;&#41;&#41; {)
+
+[//]: # (            groupId = parentComment.get&#40;&#41;.getGroupId&#40;&#41;;)
+
+[//]: # (            depth = parentComment.get&#40;&#41;.getDepth&#40;&#41;;)
+
+[//]: # (            if &#40;depth < 8&#41; depth++;)
+
+[//]: # (        })
+
+[//]: # (    })
+
+[//]: # (    //댓글 저장)
+
+[//]: # (    Comment comment = Comment.builder&#40;&#41;)
+
+[//]: # (            .groupId&#40;groupId&#41;)
+
+[//]: # (            .depth&#40;depth&#41;)
+
+[//]: # (            .nickname&#40;commentDto.getNickname&#40;&#41;&#41;)
+
+[//]: # (            .password&#40;commentDto.getPassword&#40;&#41;&#41;)
+
+[//]: # (            .content&#40;commentDto.getContent&#40;&#41;&#41;)
+
+[//]: # (            .createTime&#40;LocalDateTime.now&#40;&#41;&#41;)
+
+[//]: # (            .deleteStatus&#40;DeleteStatus.Stored&#41;)
+
+[//]: # (            .member&#40;member&#41;)
+
+[//]: # (            .board&#40;board.get&#40;&#41;&#41;)
+
+[//]: # (            .parentComment&#40;parentComment.orElse&#40;null&#41;&#41;)
+
+[//]: # (            .build&#40;&#41;;)
+
+[//]: # ()
+[//]: # (    commentRepository.save&#40;comment&#41;;)
+
+[//]: # ()
+[//]: # (    Long commentId = comment.getId&#40;&#41;;)
+
+[//]: # ()
+[//]: # (    //대댓글이 아닐경우 자신의 id를 groupId에 대입)
+
+[//]: # (    if &#40;parentId == null&#41; {)
+
+[//]: # (        comment.setGroupId&#40;commentId&#41;;)
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    return commentId;)
+
+[//]: # (})
+
+[//]: # (...)
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (## Comment Sort 구현)
+
+[//]: # (### Controller)
+
+[//]: # (```java)
+
+[//]: # (if &#40;!commentList.isEmpty&#40;&#41;&#41; {)
+
+[//]: # (    //pages = 0 : startId, 1 : limit, 2 : totalPage)
+
+[//]: # (    List<Integer> pages = findCommentStartIdAndLimit&#40;page, 50, board.getCommentList&#40;&#41;&#41;;)
+
+[//]: # (    //댓글이 startId 에서 시작해서 limit 로 끝나는 Query 로 filter_commentList 를 구한다.)
+
+[//]: # (    List<Comment> filter_commentList = commentService.getCommentList&#40;pages.get&#40;0&#41;, pages.get&#40;1&#41;, board&#41;;)
+
+[//]: # (    //filter_commentList 를 getCommentDtoList 로 바꾸는 작업을 한다.&#40;또한 댓글들을 올바르게 정렬&#41;)
+
+[//]: # (    getCommentDtoList = convertGetCommentListDto&#40;filter_commentList&#41;;)
+
+[//]: # (    pageDto.setPage&#40;page&#41;;)
+
+[//]: # (    pageDto.setTotal&#40;pages.get&#40;2&#41;&#41;;)
+
+[//]: # (})
+
+[//]: # (...)
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (### findCommentStrartIdAndLimit)
+
+[//]: # (```java)
+
+[//]: # (private List<Integer> findCommentStartIdAndLimit&#40;int page, int size, List<Comment> commentList&#41; {)
+
+[//]: # (    if &#40;commentList.isEmpty&#40;&#41;&#41; return null;)
+
+[//]: # (    Map<Long, Integer> commentCount = new LinkedHashMap<>&#40;&#41;;)
+
+[//]: # (    //대댓글이 아닌 댓글을 표시하는 groupId 를 key, 그 안에 대댓글이 얼마나 들어 있는지 세는 count 를 value 로 놓는다.)
+
+[//]: # (    for &#40;Comment comment : commentList&#41; {)
+
+[//]: # (        commentCount.put&#40;comment.getGroupId&#40;&#41;, commentCount.getOrDefault&#40;comment.getGroupId&#40;&#41;, 0&#41; + 1&#41;;)
+
+[//]: # (    })
+
+[//]: # (    //map 을 key 로 정렬한다.)
+
+[//]: # (    Map<Long, Integer> result = sortMapByKey&#40;commentCount&#41;;)
+
+[//]: # (    //앞에서 구한 map 을 가지고 시작할 commentId, Limit 를 가진 List 를 반환한다.)
+
+[//]: # (    return getCommentStartIdAndLimit&#40;page, size, result&#41;;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # (#### sortMapByKey)
+
+[//]: # (```java)
+
+[//]: # (private static LinkedHashMap<Long, Integer> sortMapByKey&#40;Map<Long, Integer> map&#41; {)
+
+[//]: # (    List<Map.Entry<Long, Integer>> entries = new LinkedList<>&#40;map.entrySet&#40;&#41;&#41;;)
+
+[//]: # (    entries.sort&#40;Map.Entry.comparingByKey&#40;&#41;&#41;;)
+
+[//]: # ()
+[//]: # (    LinkedHashMap<Long, Integer> result = new LinkedHashMap<>&#40;&#41;;)
+
+[//]: # (    for &#40;Map.Entry<Long, Integer> entry : entries&#41; {)
+
+[//]: # (        result.put&#40;entry.getKey&#40;&#41;, entry.getValue&#40;&#41;&#41;;)
+
+[//]: # (    })
+
+[//]: # (    return result;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # (#### getCommentStartIdAndLimit)
+
+[//]: # (```java)
+
+[//]: # (private List<Integer> getCommentStartIdAndLimit&#40;int page, int size, Map<Long, Integer> result&#41; {)
+
+[//]: # (    int presentPage = -1;)
+
+[//]: # (    int presentLimit = size;)
+
+[//]: # (    int sum = 0;)
+
+[//]: # (    Long startId = null;)
+
+[//]: # ()
+[//]: # (    for &#40;Map.Entry<Long, Integer> entry : result.entrySet&#40;&#41;&#41; {)
+
+[//]: # (        //page 에서 처음 시작했을때 prentPage 를 올리고 현재 페이지인 경우 첫번째 id 를 가져온다.)
+
+[//]: # (        if &#40;sum == 0&#41; {)
+
+[//]: # (            presentPage++;)
+
+[//]: # (            if &#40;presentPage == page&#41; {)
+
+[//]: # (                startId = entry.getKey&#40;&#41;;)
+
+[//]: # (            })
+
+[//]: # (        })
+
+[//]: # (        //조건이 만족할 때 까지 sum 에 대댓글이 포함된 댓글의 수를 더한다.)
+
+[//]: # (        sum += entry.getValue&#40;&#41;;)
+
+[//]: # (        //현재 page 의 limit 를 sum 이 넘으면 page 를 추가한다.)
+
+[//]: # (        if &#40;size <= sum&#41; {)
+
+[//]: # (            //현재 page 인 경우 presentLimit 를 현 페이지의 댓글 수인 sum 만큼 limit 를 지정한다.)
+
+[//]: # (            if &#40;presentPage == page&#41; {)
+
+[//]: # (                presentLimit = sum;)
+
+[//]: # (            })
+
+[//]: # (            sum = 0;)
+
+[//]: # (        })
+
+[//]: # (        //끝까지 돌리는 이유는 totalPage 를 구하기 위해서다.)
+
+[//]: # (    })
+
+[//]: # (    List<Integer> output = new ArrayList<>&#40;&#41;;)
+
+[//]: # (    output.add&#40;startId.intValue&#40;&#41;&#41;;)
+
+[//]: # (    output.add&#40;presentLimit&#41;;)
+
+[//]: # (    output.add&#40;presentPage&#41;;)
+
+[//]: # ()
+[//]: # (    return output;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (### commentService.getCommentList)
+
+[//]: # (```java)
+
+[//]: # (public List<Comment> getCommentList&#40;int startId, int limit, Board board&#41; {)
+
+[//]: # (    return commentRepository.getCommentList&#40;startId, limit, board&#41;;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # (#### getCommentList)
+
+[//]: # (```java)
+
+[//]: # (@Override)
+
+[//]: # (public List<Comment> getCommentList&#40;int id, int limit, Board board&#41; {)
+
+[//]: # (    return queryFactory)
+
+[//]: # (            .selectFrom&#40;comment&#41;)
+
+[//]: # (            .leftJoin&#40;comment.parentComment&#41;)
+
+[//]: # (            .fetchJoin&#40;&#41;)
+
+[//]: # (            .where&#40;)
+
+[//]: # (                    comment.board.eq&#40;board&#41;,)
+
+[//]: # (                    comment.id.goe&#40;id&#41;)
+
+[//]: # (            &#41;)
+
+[//]: # (            .orderBy&#40;)
+
+[//]: # (                    comment.groupId.asc&#40;&#41;,)
+
+[//]: # (                    comment.id.asc&#40;&#41;)
+
+[//]: # (            &#41;)
+
+[//]: # (            .limit&#40;limit&#41;)
+
+[//]: # (            .fetch&#40;&#41;;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (### convertGetCommentListDto)
+
+[//]: # (```java)
+
+[//]: # (private List<CommentDto.get> convertGetCommentListDto&#40;List<Comment> commentList&#41; throws Exception {)
+
+[//]: # (    List<CommentDto.get> result = new ArrayList<>&#40;&#41;;)
+
+[//]: # (    //Comment 를 GetCommentDto 로 바꾸고 GetCommentDto.children 에 자식 댓글들을 저장해 중첩 구조로 만든다.)
+
+[//]: # (    //comments 에 대댓글이 아닌 댓글들이 저장되어 있다.)
+
+[//]: # (    List<CommentDto.get> comments = createNestedStructure&#40;commentList&#41;;)
+
+[//]: # (    //comments 에서 재귀함수로 댓글들을 순서대로 result 에 넣는다.)
+
+[//]: # (    recursionNestedComment&#40;comments, result&#41;;)
+
+[//]: # (    return result;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # (#### createNestedStructure)
+
+[//]: # (```java)
+
+[//]: # (private List<CommentDto.get> createNestedStructure&#40;List<Comment> commentList&#41; throws Exception {)
+
+[//]: # (    List<CommentDto.get> result = new ArrayList<>&#40;&#41;;)
+
+[//]: # (    Map<Long, CommentDto.get> map = new HashMap<>&#40;&#41;;)
+
+[//]: # ()
+[//]: # (    for &#40;Comment comment : commentList&#41; {)
+
+[//]: # (        CommentDto.get commentDto = new CommentDto.get&#40;&#41;;)
+
+[//]: # (        commentDto.convertFrom&#40;comment&#41;;)
+
+[//]: # ()
+[//]: # (        map.put&#40;commentDto.getId&#40;&#41;, commentDto&#41;;)
+
+[//]: # (        //대댓글이 아닌 경우 result list 에 추가한다. 맞을 경우 부모 댓글 dto 의 children 에 저장한다)
+
+[//]: # (        if &#40;Optional.ofNullable&#40;comment.getParentComment&#40;&#41;&#41;.isPresent&#40;&#41;&#41; {)
+
+[//]: # (            map.get&#40;comment.getParentComment&#40;&#41;.getId&#40;&#41;&#41;.getChildren&#40;&#41;.add&#40;commentDto&#41;;)
+
+[//]: # (        } else result.add&#40;commentDto&#41;;)
+
+[//]: # (    })
+
+[//]: # (    //depth 0 인 대댓글이 아닌 댓글들을 저장한 리스트를 반환한다.)
+
+[//]: # (    return result;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # (#### recursionNestedComment)
+
+[//]: # (```java)
+
+[//]: # (private void recursionNestedComment&#40;List<CommentDto.get> commentList, List<CommentDto.get> result&#41; {)
+
+[//]: # (    for &#40;CommentDto.get comment : commentList&#41; {)
+
+[//]: # (        result.add&#40;comment&#41;;)
+
+[//]: # (        if &#40;!Optional.ofNullable&#40;comment.getChildren&#40;&#41;&#41;.isEmpty&#40;&#41;&#41; {)
+
+[//]: # (            recursionNestedComment&#40;comment.getChildren&#40;&#41;, result&#41;;)
+
+[//]: # (        })
+
+[//]: # (    })
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (## Comment Delete 구현)
+
+[//]: # (### )
+
+[//]: # (```java)
+
+[//]: # (@Transactional)
+
+[//]: # (public void deleteByComment&#40;Comment comment&#41; {)
+
+[//]: # (    if &#40;comment.getChildren&#40;&#41;.size&#40;&#41; != 0&#41; {)
+
+[//]: # (        comment.setDeleteStatus&#40;DeleteStatus.Deleted&#41;;)
+
+[//]: # (    } else {)
+
+[//]: # (        commentRepository.deleteById&#40;recursionDeleteComment&#40;comment&#41;&#41;;)
+
+[//]: # (    })
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # (#### recursionDeleteComment)
+
+[//]: # (```java)
+
+[//]: # (private Long recursionDeleteComment&#40;Comment comment&#41; {)
+
+[//]: # (    Comment parentComment = comment.getParentComment&#40;&#41;;)
+
+[//]: # ()
+[//]: # (    //부모가 1개이고 삭제 상태이면 삭제해도 문제 없기에 부모의 파라미터로 재귀한다.)
+
+[//]: # (    //만약 없거나 삭제상태가 아니라면 그 위의 댓글은 삭제할 할 수 없기에 전의 댓글들만 삭제한다.)
+
+[//]: # (    if &#40;Optional.ofNullable&#40;parentComment&#41;.isPresent&#40;&#41;&#41; {)
+
+[//]: # (        if &#40;parentComment.getChildren&#40;&#41;.size&#40;&#41; == 1 && parentComment.getDeleteStatus&#40;&#41; == DeleteStatus.Deleted&#41; {)
+
+[//]: # (            return recursionDeleteComment&#40;parentComment&#41;;)
+
+[//]: # (        })
+
+[//]: # (    })
+
+[//]: # ()
+[//]: # (    return comment.getId&#40;&#41;;)
+
+[//]: # (})
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (## SweetAlert2를 이용한 삭제창 구현)
+
+[//]: # (![1]&#40;https://user-images.githubusercontent.com/48073115/149927723-1b363f61-ac56-4835-af45-1f808e022722.png&#41;)
+
+[//]: # ()
+[//]: # (```javascript)
+
+[//]: # ($&#40; 'a[name=delete]' &#41;.click&#40;async function&#40;&#41; {)
+
+[//]: # (        const id = $&#40;this&#41;.data&#40;'id'&#41;;)
+
+[//]: # (        const login = $&#40;this&#41;.data&#40;'login'&#41;;)
+
+[//]: # ()
+[//]: # (        const token = $&#40; "meta[name='_csrf']" &#41;.attr&#40;'content'&#41;;)
+
+[//]: # (        const header = $&#40; "meta[name='_csrf_header']"&#41;.attr&#40;"content"&#41;;)
+
+[//]: # ()
+[//]: # (        let dataJSON;)
+
+[//]: # (        if &#40;login === 'N'&#41; {)
+
+[//]: # (            await Swal.fire&#40;{)
+
+[//]: # (                title: 'Input Password',)
+
+[//]: # (                input: 'text',)
+
+[//]: # (                icon: 'info',)
+
+[//]: # (                showCancelButton: true)
+
+[//]: # (            }&#41;.then&#40;&#40;result&#41; => {)
+
+[//]: # (                const data = { "password" : result.value };)
+
+[//]: # (                dataJSON = JSON.stringify&#40;data&#41;;)
+
+[//]: # (            }&#41;;)
+
+[//]: # (        } else {)
+
+[//]: # (            const data = { "password" : "" };)
+
+[//]: # (            dataJSON = JSON.stringify&#40;data&#41;;)
+
+[//]: # (        })
+
+[//]: # (        //input 창에서 cancel 눌렀을 경우 함수 종료)
+
+[//]: # (        if &#40;dataJSON === '{}'&#41; {)
+
+[//]: # (            return;)
+
+[//]: # (        })
+
+[//]: # ()
+[//]: # (        $.ajax&#40;{)
+
+[//]: # (            url : "/comment/" + id,)
+
+[//]: # (            method : "DELETE",)
+
+[//]: # (            contentType : "application/json; UTF-8",)
+
+[//]: # (            data : dataJSON,)
+
+[//]: # (            async : false,)
+
+[//]: # (            beforeSend : function&#40;xhr&#41; {)
+
+[//]: # (                xhr.setRequestHeader&#40;header, token&#41;;)
+
+[//]: # (            },)
+
+[//]: # (            success : function&#40;result&#41; {)
+
+[//]: # (                location.reload&#40;&#41;;)
+
+[//]: # (            },)
+
+[//]: # (            error : function&#40;xhr, status, error&#41; {)
+
+[//]: # (                Swal.fire&#40;{)
+
+[//]: # (                    icon: 'error',)
+
+[//]: # (                    title: xhr.responseJSON.code,)
+
+[//]: # (                    text: xhr.responseJSON.message)
+
+[//]: # (                  }&#41;;)
+
+[//]: # (            })
+
+[//]: # (        }&#41;;)
+
+[//]: # (}&#41;;)
+
+[//]: # (```)
