--- a/_posts/temp_trash_can/프로젝트/toyProject/2023-01-10-DB 설정 오류.md
+++ b/_posts/temp_trash_can/프로젝트/toyProject/2023-01-10-DB 설정 오류.md
@@ -1,10 +1,17 @@
----
-title: "DB 설정 오류"
-categories: project_toyProject
----
+[//]: # (---)
 
-[1. @DataJpaTest DataSource 설정 오류](#@DataJpaTest-DataSource-설정-오류)  
+[//]: # (title: "DB 설정 오류")
 
-# @DataJpaTest DataSource 설정 오류
-+ @DataJpaTest 는 기본적으로 내장된 메모리 데이터베이스를 이용해 테스트를 실행해주는데 나는 물리적인 Oracle 데이터베이스를 연결해서 테스트를 할려고 하여 발생한 문제였다.
-+ 참고자료 [https://charliezip.tistory.com/21](https://charliezip.tistory.com/21)
+[//]: # (categories: project_toyProject)
+
+[//]: # (---)
+
+[//]: # ()
+[//]: # ([1. @DataJpaTest DataSource 설정 오류]&#40;#@DataJpaTest-DataSource-설정-오류&#41;  )
+
+[//]: # ()
+[//]: # (# @DataJpaTest DataSource 설정 오류)
+
+[//]: # (+ @DataJpaTest 는 기본적으로 내장된 메모리 데이터베이스를 이용해 테스트를 실행해주는데 나는 물리적인 Oracle 데이터베이스를 연결해서 테스트를 할려고 하여 발생한 문제였다.)
+
+[//]: # (+ 참고자료 [https://charliezip.tistory.com/21]&#40;https://charliezip.tistory.com/21&#41;)
