--- a/_posts/temp_trash_can/프로젝트/toyProject/2023-01-12-Gradle 오류.md
+++ b/_posts/temp_trash_can/프로젝트/toyProject/2023-01-12-Gradle 오류.md
@@ -1,12 +1,20 @@
----
-title: "Gradle 오류"
-categories: project_toyProject
----
+[//]: # (---)
 
-[1. 상위 폴더 생성 오류](#상위-폴더-생성-오류)  
+[//]: # (title: "Gradle 오류")
 
-# 상위 폴더 생성 오류
-+ gradle 실행시 sync 오류로 could not create parent directory for lock file ../..zip 이 뜬다.
+[//]: # (categories: project_toyProject)
 
-## 해결방법
-+ 다운 받을 상위 폴더의 속성을 열어 보안탭에서 Users를 편집해 사용 권한에서 쓰기를 허용한다.
+[//]: # (---)
+
+[//]: # ()
+[//]: # ([1. 상위 폴더 생성 오류]&#40;#상위-폴더-생성-오류&#41;  )
+
+[//]: # ()
+[//]: # (# 상위 폴더 생성 오류)
+
+[//]: # (+ gradle 실행시 sync 오류로 could not create parent directory for lock file ../..zip 이 뜬다.)
+
+[//]: # ()
+[//]: # (## 해결방법)
+
+[//]: # (+ 다운 받을 상위 폴더의 속성을 열어 보안탭에서 Users를 편집해 사용 권한에서 쓰기를 허용한다.)
